fixed selected works alignment issue, added skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -997,6 +997,7 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 	
 	.project-categ {
 		font-weight: lighter;
+		text-align: right !important;
 	}
 
 	.project-title {
